# ws

./: .coverage.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .safety-policy.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  mkdocs.yml  noxfile.py  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  publish.yml
docs/: index.md  installation.md  requirements.txt  settings.md
docs/commands/: completion.md  echo_server.md  listen_and_tail.md  ping_and_pong.md  session.md  text_and_byte.md
tests/: conftest.py  helpers.py  test_client.py  test_completion.py  test_console.py  test_parameters.py  test_settings.py  test_size.py  test_traceback.py  test_utils.py
tests/commands/: test_byte.py  test_completion.py  test_echo_server.py  test_listen.py  test_ping.py  test_ping_pong.py  test_pong.py  test_tail.py  test_text_byte.py
tests/commands/new_session/: test_close.py  test_common_usage.py  test_help.py  test_ping.py  test_pong.py  test_quit.py  test_text_byte.py
tests/commands/session/: test_close.py  test_common_usage.py  test_help.py  test_ping.py  test_pong.py  test_quit.py  test_text_byte.py
tests/test_utils/: test_decorators.py  test_io.py  test_lexer.py
ws/: client.py  console.py  main.py  options.py  parameters.py  settings.py  utils.py
ws/commands/: byte.py  completion.py  echo_server.py  listen.py  new_session.py  ping.py  pong.py  session.py  tail.py  text_byte.py
ws/utils/: command.py  decorators.py  documentation.py  io.py  lexer.py  size.py
