[tool.poetry]
name = "websockets-cli"
version = "0.2.1"
description = "A simple yet powerful websocket cli"
authors = ["le_woudar <lewoudar@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
keywords = ["websocket", "cli", "trio", "anyio"]

homepage = "https://pyws.readthedocs.io"
repository = "https://github.com/lewoudar/ws"
documentation = "https://pyws.readthedocs.io"

classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Terminals",
    "Operating System :: OS Independent",
    "Framework :: Trio",
    "Environment :: Web Environment",
    "Programming Language :: Python :: Implementation :: PyPy"
]

packages = [
    { include = "ws" }
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/lewoudar/ws/issues"
"Changelog" = "https://github.com/lewoudar/ws/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.7"
trio-websocket = "^0.9.2"
rich = "^13.0.0"
pydantic = "^1.9.0"
tomli = "^2.0.1"
click = "^8.0.4"
python-dotenv = "^0.21.0"
certifi = "^2022.12.7"
click-didyoumean = "^0.3.0"
shellingham = "^1.4.0"
prompt-toolkit = "^3.0.29"

[tool.poetry.group.test.dependencies]
pytest = "^7.0.0"
pytest-cov = "^3.0.0"
pytest-trio = "^0.7.0"
pre-commit = "^2.17.0"
cffi = "^1.15.0"
pytest-mock = "^3.7.0"
mock = "^5.0.0"
trustme = "^0.9.0"
ipython = "7.32"
freezegun = "^1.2.1"
nox = "^2022.1.7"

[tool.poetry.group.lint.dependencies]
isort = "^5.10.1"
bandit = "^1.7.4"
flake8 = "^3.9.2"
black = "^23.1.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.0"
mkdocs-material = "^9.0.0"

[tool.poetry.group.security.dependencies]
safety = "^2.3.0"

[tool.poetry.scripts]
ws = "ws.main:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=ws --cov-report html --cov-report xml"
trio_mode = true

[tool.isort]
line_length = 120
profile = "black"

[tool.black]
line-length = 120
skip-string-normalization = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
